# datasette-sidebar

./: .gitignore  CLAUDE.md  Justfile  pyproject.toml
datasette_sidebar/: __init__.py  hookspecs.py  internal_db.py  internal_migrations.py  page_data.py  router.py
datasette_sidebar/routes/: api.py
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/page_data/: load.ts
frontend/src/sidebar/: AppsSection.svelte  DataTree.svelte  Icons.svelte  Section.svelte  Sidebar.svelte  StarredSection.svelte  index.ts  types.ts
sample/: sample_sidebar_app.py
scripts/: typegen-pagedata.py
tests/: test_sidebar.py
